fix scrollbar gutter on token picker

--- a/src/components/Cart/CartModal/CartModal.css
+++ b/src/components/Cart/CartModal/CartModal.css
@@ -203,10 +203,6 @@
   font-size: 25px;
 }
 
-.kszyds {
-  padding-right: 0.25rem;
-}
-
 ._1pi21y70 {
   height: 100%;
   scrollbar-color: var(--genie-colors-backgroundOutline) transparent;
